# biscuit-haskell

./: .cabal.project.local  .gitignore  Makefile  README.md  ToDo.md  biscuit-haskell.cabal  biscuit_auth.h  cabal.project  main.c  package.yaml  publish.sh  shell.nix  stack.yaml  tags  toto.nix
.github/workflows/: github-actions.yml  setup_ci_env.sh
app/: Main.hs
biscuit/: ChangeLog.md  Makefile  README.md  biscuit-haskell.cabal
biscuit-servant/: ChangeLog.md  Makefile  README.md  biscuit-servant.cabal
biscuit-servant/src/Auth/Biscuit/: Servant.hs
biscuit-servant/test/: AppWithAuthorizer.hs  AppWithVerifier.hs  ClientHelpers.hs  Spec.hs
biscuit-twain/: biscuit-twain.cabal
biscuit-twain/src/Web/Twain/: Biscuit.hs
biscuit-wai/: LICENSE  biscuit-wai.cabal
biscuit-wai/src/Network/Wai/Middleware/: Biscuit.hs
biscuit-wai/test/: Spec.hs
biscuit/benchmarks/: Bench.hs
biscuit/src/Auth/: Biscuit.hs
biscuit/src/Auth/Biscuit/: Crypto.hs  Example.hs  Proto.hs  Proto2.hs  ProtoBufAdapter.hs  ProtoBufAdapter2.hs  Symbols.hs  Timer.hs  Token.hs  Token2.hs  Utils.hs
biscuit/src/Auth/Biscuit/Datalog/: AST.hs  Executor.hs  Parser.hs  ScopedExecutor.hs
biscuit/test/: Spec.hs
biscuit/test/Spec/: Crypto.hs  Executor.hs  NewCrypto.hs  Parser.hs  Quasiquoter.hs  RevocationIds.hs  Roundtrip.hs  SampleReader.hs  Samples2.hs  ScopedExecutor.hs  Verification.hs
biscuit/test/samples/v2/: samples-new.json  test24_third_party.bc  test25_third_party_keys.bc
biscuit/usr/include/biscuit_auth/: biscuit_auth.h
biscuit/usr/lib/pkgconfig/: biscuit_auth.pc
src/: Biscuit.chs  Biscuit.hs  DatalogQQ.hs  Example.hs  Inline.hs  Lib.hs  Proto.hs  ProtoBufAdapter.hs  Sel.hs  Timer.hs  Token.hs
src/Auth/: Biscuit.hs
src/Auth/Biscuit/: Example.hs  Proto.hs  ProtoBufAdapter.hs  Sel.hs  Timer.hs  Token.hs  Utils.hs
src/Auth/Biscuit/Datalog/: AST.hs  Executor.hs  Parser.hs
src/Biscuit/: Internal.chs
src/Datalog/: AST.hs  Executor.hs  Parser.hs
test/: Spec.hs
test/Spec/: Crypto.hs  Executor.hs  Parser.hs  Quasiquoter.hs  RevocationIds.hs  Roundtrip.hs  Samples.hs  Verification.hs
yolo/usr/include/biscuit_auth/: biscuit_auth.h
yolo/usr/lib/pkgconfig/: biscuit_auth.pc
