cabal-version: 2.0

name:           biscuit-servant
version:        0.4.0.0
category:       Security
synopsis:       Servant support for the Biscuit security token
description:    Please see the README on GitHub at <https://github.com/biscuit-auth/biscuit-haskell#readme>
homepage:       https://github.com/biscuit-auth/biscuit-haskell#readme
bug-reports:    https://github.com/biscuit-auth/biscuit-haskell/issues
author:         Clément Delafargue
maintainer:     clement@delafargue.name
copyright:      2021 Clément Delafargue
license:        BSD3
license-file:   LICENSE
build-type:     Simple
tested-with:    GHC ==9.0.2 || ==9.2.4 || ==9.6.5 || ==9.8.2
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/biscuit-auth/biscuit-haskell

library
  exposed-modules:
      Auth.Biscuit.Servant
  other-modules:
      Paths_biscuit_servant
  autogen-modules:
      Paths_biscuit_servant
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
    base                 >= 4.7 && <5,
    biscuit-haskell      >= 0.4 && < 0.5,
    bytestring           >= 0.10 && <0.12,
    mtl                  >= 2.2 && < 2.4,
    text                 >= 1.2 && <3,
    servant-server       >= 0.18 && < 0.21,
    wai                  ^>= 3.2
  default-language: Haskell2010

test-suite biscuit-servant-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      AppWithAuthorizer
      ClientHelpers
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , biscuit-haskell
    , biscuit-servant
    , bytestring
    , hspec
    , http-client
    , mtl
    , servant
    , servant-server
    , servant-client
    , servant-client-core
    , text
    , time
    , warp
  default-language: Haskell2010
