cabal-version: 2.0

name:           biscuit-twain
version:        0.1.0.0
category:       Security
synopsis:       WAI middleware for the Biscuit security token
description:    Please see the README on GitHub at <https://github.com/biscuit-auth/biscuit-haskell#readme>
homepage:       https://github.com/biscuit-auth/biscuit-haskell#readme
bug-reports:    https://github.com/biscuit-auth/biscuit-haskell/issues
author:         Clément Delafargue
maintainer:     clement@delafargue.name
copyright:      2021 Clément Delafargue
license:        BSD3
license-file:   LICENSE
build-type:     Simple
tested-with:    GHC ==8.10.7 || == 9.0.2 || == 9.2.4
extra-source-files:

source-repository head
  type: git
  location: https://github.com/biscuit-auth/biscuit-haskell

library
  exposed-modules:
      Web.Twain.Biscuit
  other-modules:
      Paths_biscuit_twain
  autogen-modules:
      Paths_biscuit_twain
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
    base                 >= 4.7 && <5,
    biscuit-haskell      >= 0.3 && < 0.4,
    bytestring           >= 0.10 && <0.12,
    http-types           ^>= 0.12,
    twain                ^>= 2.1,
    vault                ^>= 0.3,
    wai                  ^>= 3.2
  default-language: Haskell2010

test-suite biscuit-twain-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , biscuit-haskell
    , biscuit-wai
    , bytestring
    , hspec
    , http-client
    , http-types
    , text
    , twain
    , wai
    , warp
  default-language: Haskell2010
